--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">Interview</string>
-    <string name="action_settings">Settings</string>
-    <string name="meeting_list">List of meetings</string>
-    <string name="participants">Participants</string>
-    <string name="list_of_meetings">List of meetings</string>
-    <string name="profile_name">Profile name</string>
-    <string name="user_profile_picture">User Profile Picture</string>
+<string name="app_name">Interview</string>
+<string name="action_settings">Settings</string>
+<string name="meeting_list">List of meetings</string>
+<string name="participants">Participants</string>
+<string name="list_of_meetings">List of meetings</string>
+<string name="profile_name">Profile name</string>
+<string name="user_profile_picture">User Profile Picture</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
 </resources>
